De-pluralise organism filter titles, give analysis modal enough height for metrics tab, fix alignment of novel icon.

--- a/src/components/modal/styles.css
+++ b/src/components/modal/styles.css
@@ -18,7 +18,7 @@
   max-width: 800px;
   transform: none;
   height: 80%;
-  max-height: 800px;
+  max-height: 816px;
   display: flex;
   flex-direction: column;
 }
